--- a/public/s2s.html
+++ b/public/s2s.html
@@ -25,7 +25,10 @@
   </header>
 
   <div id="payment-wrapper">
-    <div id="use-cases-panel" class="panel"></div>
+    <div id="extra-params-panel">
+  <div id="use-cases-panel" class="panel"></div>
+  <div id="extra-params-panel"></div>
+  </div>
 
     <!-- ======= FORMULAIRE S2S ======= -->
     <form id="s2s-form" class="panel">
