--- a/public/hostedforms.html
+++ b/public/hostedforms.html
@@ -51,6 +51,7 @@
           method="post"
           action="/processHostedForm">
       <h3>Paiement Hosted Forms</h3>
+        <div id="extra-params-panel"></div>
 
       <label>Operation Type</label>
       <input type="text" name="OPERATIONTYPE" value="payment" />
@@ -90,6 +91,7 @@
   </div>
 
   <script src="env-manager.js"></script>
+  <script src="extra-params.js"></script>
   <script src="script.js"></script>
   <script src="test-cards.js"></script>
 
