--- a/public/next.html
+++ b/public/next.html
@@ -31,13 +31,6 @@
       margin-bottom: 1.8rem;
       color: #f1f1f1;
     }
-    .form-group { margin-bottom: 1.2rem; }
-    label {
-      display:block;
-      font-weight:600;
-      margin-bottom:0.4rem;
-      color: #ddd;
-    }
     input[type="text"], input[type="email"] {
       width:95%;
       padding:0.7rem 0.8rem;
@@ -78,50 +71,51 @@
 
 <div id="payment-wrapper">
   <div id="use-cases-panel" class="panel"></div>
-
   <div class="card">
-    <h1>Paiement sécurisé</h1>
+    <h1>Payment form</h1>
+  <div id="extra-params-panel"></div>
 
     <form id="paymentForm">
-      <input type="hidden" name="method" value="payment" />
-      <input type="hidden" name="params[VERSION]" value="3.0" />
-      <input type="hidden" name="params[DESCRIPTION]" value="Cart content" />
-      <input type="hidden" name="params[ORDERID]" value="" />
-      <input type="hidden" name="params[CLIENTUSERAGENT]" value="Mozilla/5.0" />
-      <input type="hidden" name="params[CLIENTIP]" value="192.168.1.1" />
-      <input type="hidden" name="params[HASH]" value="" />
-      <input type="hidden" name="params[3DSECUREDISPLAYMODE]" value="raw"/>
-      <input type="hidden" name="params[REDIRECTURLSUCCESS]" id="redirect-success" />
-      <input type="hidden" name="params[REDIRECTURLCANCEL]"  id="redirect-cancel" />
-      <input type="hidden" id="identifier" name="params[IDENTIFIER]" value="" />
+      <input type="hidden" name="VERSION" value="3.0" />
+      <input type="hidden" name="DESCRIPTION" value="Cart content" />
+      <input type="hidden" name="ORDERID" value="" />
+      <input type="hidden" name="CLIENTUSERAGENT" value="Mozilla/5.0" />
+      <input type="hidden" name="CLIENTIP" value="192.168.1.1" />
+      <input type="hidden" name="HASH" value="" />
+      <input type="hidden" name="3DSECUREDISPLAYMODE" value="raw" />
+      <input type="hidden" name="REDIRECTURLSUCCESS" id="redirect-success" />
+      <input type="hidden" name="REDIRECTURLCANCEL" id="redirect-cancel" />
+      <input type="hidden" id="identifier" name="IDENTIFIER" value="" />
+
 
       <!-- 🔑 Environnement choisi -->
       <input type="hidden" name="environment" id="selected-environment" />
 
-      <div class="form-group">
+            <div class="form-group">
         <label for="operationType">Operation Type</label>
-        <input type="text" id="operationType" name="params[OPERATIONTYPE]" value="authorization" />
+        <input type="text" id="operationType" name="OPERATIONTYPE" value="authorization" />
       </div>
 
       <div class="form-group">
-        <label for="amount">Amount</label>
-        <input type="text" id="amount" name="params[AMOUNT]" value="12345" />
+        <label for="amount">Amount (in cents)</label>
+        <input type="text" id="amount" name="AMOUNT" value="12345" />
       </div>
 
       <div class="form-group">
         <label for="clientEmail">Client Email</label>
-        <input type="email" id="clientEmail" name="params[CLIENTEMAIL]" value="john.snow@example.com" />
+        <input type="email" id="clientEmail" name="CLIENTEMAIL" value="john.snow@example.com" />
       </div>
 
       <div class="form-group">
         <label for="clientIdent">Client Identifier</label>
-        <input type="text" id="clientIdent" name="params[CLIENTIDENT]" value="john.snow.12" />
+        <input type="text" id="clientIdent" name="CLIENTIDENT" value="john.snow.12" />
       </div>
 
       <div class="form-group">
         <label for="hfToken">HFTOKEN</label>
-        <input type="text" id="hfToken" name="params[HFTOKEN]" value="" />
+        <input type="text" id="hfToken" name="HFTOKEN" value="" readonly />
       </div>
+
 
       <input type="submit" value="Payer" />
       <div class="form-note">Le hash est calculé côté serveur, sécurisé 🔒</div>
@@ -132,136 +126,8 @@
 <script src="use-case-selection.js"></script>
 <script src="extra-params.js"></script>
 <script src="env-manager.js"></script>
-
-<script>
-document.addEventListener("DOMContentLoaded", async () => {
-  const base = window.location.origin;
-  document.getElementById("redirect-success").value = `${base}/success.html`;
-  document.getElementById("redirect-cancel").value  = `${base}/success.html`;
-
-  // 🧩 Récupère le hfToken dans l'URL (si présent)
-  const params = new URLSearchParams(window.location.search);
-  const hfToken = params.get("hfToken");
-  if (hfToken) document.getElementById("hfToken").value = hfToken;
-
-  // 🧩 Génère un ORDERID unique
-  document.querySelector('input[name="params[ORDERID]"]').value = "RND" + Date.now();
-
-  // === 🔐 Chargement environnement depuis le localStorage ===
-  const lastEnv = localStorage.getItem("lastEnv");
-  const customEnvs = JSON.parse(localStorage.getItem("customEnvs") || "{}");
-  const env = lastEnv ? customEnvs[lastEnv] : null;
-
-  if (!env || !env.secretKey) {
-    alert("⚠️ Aucun environnement valide trouvé dans le navigateur (clé manquante).");
-    return;
-  }
-
-  document.getElementById("selected-environment").value = lastEnv;
-  document.getElementById("identifier").value = env.identifier || "";
-  console.log(`✅ Environnement "${lastEnv}" chargé depuis localStorage.`);
-
-  // === 💳 Gestion du formulaire de paiement ===
-  const form = document.getElementById("paymentForm");
-  form.addEventListener("submit", async (e) => {
-    e.preventDefault();
-
-    // Récupération des champs du formulaire
-    const formData = new FormData(form);
-    const params = {};
-    formData.forEach((value, key) => {
-      const match = key.match(/^params\[(.+)\]$/);
-      if (match) {
-        params[match[1]] = value;
-      }
-    });
-
-    // Calcul du hash côté serveur avec la clé secrète
-    let hashValue = "";
-    try {
-      const respHash = await fetch("/computeHash", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          params,
-          secretKey: env.secretKey // ✅ clé directement envoyée au serveur
-        })
-      });
-
-      const hashData = await respHash.json();
-      if (!hashData.hash) throw new Error("Hash non retourné par le serveur");
-
-      hashValue = hashData.hash;
-      params.HASH = hashValue; // on ajoute le hash dans les params
-      console.log("✅ Hash calculé:", hashValue);
-    } catch (err) {
-      console.error("Erreur calcul du hash:", err);
-      alert("Erreur calcul du hash: " + err.message);
-      return;
-    }
-
-    // Envoi du paiement vers le serveur
-    try {
-      const respPay = await fetch("/processPayment", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          ...params,
-          secretKey: env.secretKey // ⚠️ requis côté serveur aussi
-        })
-      });
-
-      const data = await respPay.json();
-      console.log("Réponse paiement:", data);
-
-      const res = data.response || {};
-      const reqId = data.reqId;
-
-      // Redirections 3DS
-      if (res.REDIRECTHTML) {
-        const decoded = atob(res.REDIRECTHTML);
-        const doc = document.open("text/html", "replace");
-        doc.write(decoded);
-        doc.close();
-        return;
-      }
-
-      if (res.REDIRECTURL) {
-        const form3ds = document.createElement("form");
-        form3ds.method = "POST";
-        form3ds.action = res.REDIRECTURL;
-
-        const params3ds = new URLSearchParams(res.REDIRECTPOSTPARAMS);
-        params3ds.forEach((v, k) => {
-          const input = document.createElement("input");
-          input.type = "hidden";
-          input.name = k;
-          input.value = v;
-          form3ds.appendChild(input);
-        });
-
-        document.body.appendChild(form3ds);
-        form3ds.submit();
-        return;
-      }
-
-      // ✅ Pas de 3DS → redirection vers success.html
-      const successUrl = new URL("success.html", window.location.origin);
-      successUrl.searchParams.set("reqId", reqId || "");
-      Object.entries(res).forEach(([k, v]) => {
-        if (v != null) successUrl.searchParams.set(k, v);
-      });
-      window.location.href = successUrl.toString();
-
-    } catch (err) {
-      console.error("Erreur paiement:", err);
-      alert("Erreur côté client: " + err.message);
-    }
-  });
-});
-</script>
-
-
+<script src="form-handler.js"></script>
+<script src="payment-utils.js"></script>
 
 </body>
 </html>
